Support production build for client side

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,7 @@
 <title>Convert from JQuery template</title>
 
 <script type="text/javascript" src="dist/core.bundle.js"></script>
+<link rel="stylesheet" type="text/css" href="dist/core.css">
 </head>
 
 <body>
